--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,11 @@
             android:theme="@style/Theme.ActionBar"
             android:parentActivityName=".MainActivity" />
         <activity
+            android:name=".LocationManage"
+            android:exported="false"
+            android:theme="@style/Theme.ActionBar"
+            android:parentActivityName=".MainActivity" />
+        <activity
             android:name=".MainActivity"
             android:exported="false">
         </activity>
