--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
             android:exported="false"
             android:theme="@style/Theme.ActionBar"
             android:parentActivityName=".LoginActivity" />
+        <activity android:name=".SearchResultsActivity" />
     </application>
 
 </manifest>
