--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:theme="@style/Theme.MountHub"
         tools:targetApi="31">
         <activity
-            android:name=".SOS"
+            android:name=".InfoAndSafetyInstructionsScreen"
             android:exported="false" />
         <activity
             android:name=".NotificationsActivity"
