Added Location items in the nearby list and almost made it interactable

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
 
         </activity>
         <activity android:name=".NearbyLocActivity" />
-
+        <activity android:name=".LocationManager" />
         <activity
             android:name=".LoginActivity"
             android:exported="true"
